# docrab

./: .env  .gitignore  .gitmodules  README.md
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Insomnia_2022-03-11.json  docker-compose.yml
api/migrations/2022-06-25-212743_add_tables/: down.sql  up.sql
api/migrations/2022-07-03-202107_add_unique_on_document_tag/: down.sql  up.sql
api/src/: broker.rs  cors.rs  db.rs  errors.rs  files.rs  lib.rs  main.rs  schema.rs
api/src/models/: document.rs  document_file.rs  document_tag.rs  document_type.rs  mod.rs  tag.rs
api/src/routes/: document.rs  document_file.rs  document_tag.rs  document_type.rs  mod.rs  tag.rs
docrab-lib/: .env  .env.example  Cargo.toml
docrab-lib/src/: lib.rs
lib/src/: lib.rs
web/: package-lock.json  package.json
worker/: .env.example  Cargo.toml
worker/src/: config.rs  main.rs  tasks.rs
worker/src/models/: document_file.rs  mod.rs
