[package]
name = "docrab-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.0.3"
tokio-amqp = "2.0.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
dotenv = "0.15.0"
magick_rust = "0.15.0"

docrab-lib = { path = "../docrab-lib" }