[package]
name = "docrab-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
tokio-amqp = "2.0.0"
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
dotenvy = "0.15.1"
magick_rust = "0.16.0"
sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-native-tls"] }

docrab-lib = { path = "../lib" }